@@ -1,2 +1,3 @@
 RAYLIB_MODELS_PATH = "../raylib_dll/raylib/examples/models/"
 RAYLIB_TEXT_PATH = "../raylib_dll/raylib/examples/text/"
+RAYLIB_TEXTURE_PATH = "../raylib_dll/raylib/examples/textures/"
