@@ -1,6 +1,7 @@
 2021-10-31  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/text_unicode.rb: Added
+	* examples/textures_bunnymark.rb: Added
 
 2021-10-28  vaiorabbit  <http://twitter.com/vaiorabbit>
 
